# picolan_vala

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.exe.stackdump  build  config.h  config.status  configure  configure.ac  gpicolan-1.0.pc  gpicolan-1.0.pc.in  gserial_test.h  libtool  main  picolan-1.0.gir  picolan-1.0.pc  picolan-1.0.typelib  picolan-1.0.vapi  picolan.h
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
examples/: main.py
src/: .client.vala.swp  .datagram.vala.swp  .interface.vala.swp  .socket.vala.swp  .socket_stream.vala.swp  Makefile  Makefile.am  Makefile.in  address_field.c  address_field.vala  client.c  client.vala  datagram.c  datagram.vala  interface.c  interface.vala  socket.c  socket.vala  socket_stream.c  socket_stream.vala
src/.deps/: libgpicolan_1_0_la-address_field.Plo  libgpicolan_1_0_la-client.Plo  libgpicolan_1_0_la-datagram.Plo  libgpicolan_1_0_la-interface.Plo  libgpicolan_1_0_la-socket.Plo  libgpicolan_1_0_la-socket_stream.Plo
